--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
         <label for="weight">Enter your weight(Kg)</label>
         <input type="number" name="weight" id="weight" placeholder="e.g. 65">
 
-        <button onclick="Bmi_Calculate">Submit</button>
+        <button onclick="Bmi_Calculate()">Submit</button>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script type="module" src="script.mjs"></script>
 </body>
 </html>
